去除不要藥codeing增加註解  增加scss 常用全域參數

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <script type="module" src="index.js"></script>
     <script>
-      window.addEventListener('scroll', scrollHandler);
+      // window.addEventListener('scroll', scrollHandler);
     </script>
 </body>
 
