--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <h1 class="move-left">左左左左</h1>
     <h1 class="move-right">右右右右右右</h1>
 
-
+    <div id="footer"></div>
 
     <script type="module" src="index.js"></script>
     <script>
