--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="Andyeeee.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.css'
+    integrity='sha512-VcyUgkobcyhqQl74HS1TcTMnLEfdfX6BbjhH8ZBjFU9YTwHwtoRtWSGzhpDVEJqtMlvLM2z3JIixUOu63PNCYQ=='
+    crossorigin='anonymous' />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -29,6 +32,9 @@
 </head>
 
 <body>
+
+  <header id="nav"></header>
+  <div id="title"></div>
   <section class="box"></section>
   <div class="container">
     <div class="move-up">
@@ -66,10 +72,18 @@
 
     <div id="footer"></div>
 
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.js'
+      integrity='sha512-lsA4IzLaXH0A+uH6JQTuz6DbhqxmVygrWv1CpC/s5vGyMqlnP0y+RYt65vKxbaVq+H6OzbbRtxzf+Zbj20alGw=='
+      crossorigin='anonymous'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.js'
+      integrity='sha512-sSOeacod972lTNk0ePyxrSSI6yoqvGRm7bbqtwqsY1r7TcdYiQn/a+KvaYQ0iacHBYE/MSEVjTNa2dglSz74vA=='
+      crossorigin='anonymous'></script>
     <script type="module" src="index.js"></script>
     <script>
       // window.addEventListener('scroll', scrollHandler);
+
     </script>
+
 </body>
 
 </html>
