--- a/compoment/title.html
+++ b/compoment/title.html
@@ -18,10 +18,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="index.html">index</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="other1.html">other1</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
