--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="Andyeeee.css">
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.css'
-    integrity='sha512-VcyUgkobcyhqQl74HS1TcTMnLEfdfX6BbjhH8ZBjFU9YTwHwtoRtWSGzhpDVEJqtMlvLM2z3JIixUOu63PNCYQ=='
-    crossorigin='anonymous' />
+  <link rel="stylesheet" href="style/Andyeeee.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.css' />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -32,7 +30,7 @@
 </head>
 
 <body>
-
+  <a href="/result/other1.html">asdsad</a>
   <header id="nav"></header>
   <div id="title"></div>
   <section class="box"></section>
