--- a/compoment/title.html
+++ b/compoment/title.html
@@ -21,10 +21,10 @@
             <a class="nav-link active" aria-current="page" href="index.html">index</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="other1.html">other1</a>
+            <a class="nav-link" href="result/other1.html">other1</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="result/other1.htm2">result2</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
