--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="Andyeeee.css">
+  <link rel="stylesheet" href="/style/Andyeeee.css">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.css'
     integrity='sha512-VcyUgkobcyhqQl74HS1TcTMnLEfdfX6BbjhH8ZBjFU9YTwHwtoRtWSGzhpDVEJqtMlvLM2z3JIixUOu63PNCYQ=='
     crossorigin='anonymous' />
@@ -32,9 +32,8 @@
 </head>
 
 <body>
-
-  <header id="nav"></header>
   <div id="title"></div>
+
   <section class="box"></section>
   <div class="container">
     <div class="move-up">
@@ -79,6 +78,7 @@
     <script type="module" src="index.js"></script>
     <script>
       // window.addEventListener('scroll', scrollHandler);
+
 
     </script>
 
