--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="/style/Andyeeee.css">
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.css'
-    integrity='sha512-VcyUgkobcyhqQl74HS1TcTMnLEfdfX6BbjhH8ZBjFU9YTwHwtoRtWSGzhpDVEJqtMlvLM2z3JIixUOu63PNCYQ=='
-    crossorigin='anonymous' />
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.css' />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -32,7 +30,7 @@
 </head>
 
 <body>
-  <div id="title"></div>
+  <div id="nav"></div>
 
   <section class="box"></section>
   <div class="container">
@@ -71,17 +69,13 @@
 
     <div id="footer"></div>
 
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.js'
-      integrity='sha512-lsA4IzLaXH0A+uH6JQTuz6DbhqxmVygrWv1CpC/s5vGyMqlnP0y+RYt65vKxbaVq+H6OzbbRtxzf+Zbj20alGw=='
-      crossorigin='anonymous'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.js'></script>
 
     <script type="module" src="index.js"></script>
     <script>
       // window.addEventListener('scroll', scrollHandler);
-
+      /*這裡或是index.js擇一打 */
 
     </script>
-
-</body>
 
 </html>
