--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
   <link rel="stylesheet" href="style/Andyeeee.css">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.css' />
+  <link rel="stylesheet" href="style/css/style.css">
+  <!-- 由上而下 同樣樣式新蓋舊 -->
   <style>
     body {
       font-family: Arial, sans-serif;
