--- a/result/page2.html
+++ b/result/page2.html
@@ -11,6 +11,7 @@
 <body>
   <div id="Resultnav"></div>
   <div class="reulttitle">page-2</div>
+  <div id="footer"></div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.js'></script>
   <script type="module" src="../index.js"></script>
 </body>
