--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
 
     .container {
-      height: 100vh;
+      min-height: 100vh;
       /* height: 200vh; */
       /* 創建一個長度足夠的內容，以便可以滾動 */
 
@@ -70,7 +70,7 @@
     <h1 class="move-left">左左左左</h1>
     <h1 class="move-right">右右右右右右</h1>
 
-    <div id="footer"></div>
+
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.js'></script>
 
