--- a/index.html
+++ b/index.html
@@ -17,12 +17,6 @@
 
     }
 
-    .container {
-      min-height: 100vh;
-      /* height: 200vh; */
-      /* 創建一個長度足夠的內容，以便可以滾動 */
-
-    }
 
 
     .box {
@@ -36,7 +30,7 @@
   <div id="nav"></div>
 
   <section class="box"></section>
-  <div class="container">
+  <div class="min-high-100vh">
     <div class="move-up">
       <h1>這是一個滑入淡入效果的物件</h1>
     </div>
@@ -70,7 +64,7 @@
     <h1 class="move-left">左左左左</h1>
     <h1 class="move-right">右右右右右右</h1>
 
-
+    <div id="footer"></div>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.js'></script>
 
